--- a/WBTASK5.html
+++ b/WBTASK5.html
@@ -10,18 +10,18 @@
     <section>
    <h3>Image one</h3>
    <a href="https://www.vsco.com/kingdobby" target="_blank">  
-<img src="C:\Users\Maryam\Downloads\A87AD227-1188-40B4-92C6-7E0929F564AA.jpeg" alt="image" title="Photography">
+<img src="C:\Users\Maryam\Downloads\A87AD227-1188-40B4-92C6-7E0929F564AA.jpeg" alt="image" title="Photography" width="300">
 
    </a>
 
    <h3>Image two</h3>
    <a href="https://www.vsco.com/kingdobby" target="_blank">  
-<img src="C:\Users\Maryam\Downloads\4C27621C-06DA-45B4-991D-536E30430A32.jpeg" alt="image" title="Photography">
+<img src="C:\Users\Maryam\Downloads\4C27621C-06DA-45B4-991D-536E30430A32.jpeg" alt="image" title="Photography"width="300">
 
    </a>
    <h3>Image tthree</h3>
    <a href="https://www.vsco.com/kingdobby" target="_blank">  
-<img src="C:\Users\Maryam\Downloads\463A9B31-95A8-4128-B62C-D6637EEAE27B.jpeg" alt="image" title="Photography">
+<img src="C:\Users\Maryam\Downloads\463A9B31-95A8-4128-B62C-D6637EEAE27B.jpeg" alt="image" title="Photography" width="300">
 
    </a>
     </section>
